<resources>
    <string name="app_name">RegisterDemo</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="register">REGISTER</string>
    <string name="welcome_message">Welcome \n to our registration app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">apply</string>
    <string name="validation">Validation</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_avatar">User avatar</string>
    <string name="successful_registration">Successful registration</string>
    <string name="no_internet">No internet connection</string>

</resources>