<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_black"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profileCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/avatarImage"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/user_avatar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/firstNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/vertical_margin"
                android:fontFamily="@font/circular_black"
                android:text="@string/first_name"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toTopOf="@+id/lastNameTextView"
                app:layout_constraintStart_toEndOf="@+id/avatarImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lastNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/vertical_margin"
                android:fontFamily="@font/circular_black"
                android:text="@string/last_name"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toTopOf="@+id/emailNameTextView"
                app:layout_constraintStart_toEndOf="@+id/avatarImage"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTextView" />

            <TextView
                android:id="@+id/emailNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/vertical_margin"
                android:fontFamily="@font/circular_black"
                android:text="@string/email"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatarImage"
                app:layout_constraintTop_toBottomOf="@+id/lastNameTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>